# onesti-lock

./: .dogcatrc  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  beads-prompt.md  diagnostics.json  hacs.json  info.md  pyproject.toml
.beads/: metadata.json
.github/workflows/: ci.yml  hacs-validate.yml  release.yml
blueprints/automation/: goodnight_lock.yaml  lock_connectivity_alert.yaml  unlock_activity_notify.yaml
custom_components/nimly_pro/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  helpers.py  lock.py  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  strings.json
custom_components/onesti_lock/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
docs/: app-architecture.md  ble-protocol.md  cloud-api-status.md  debugging.md  email-onesti-draft.md  hardware-gateway.md  iotiliti-api-spec.yaml  reversing-notes.md  session-notes-2026-03-28.md  slot-numbering.md  technical.md  visjon.md  zigbee-captures.md
docs/archive/: 2026-03-28-nimly-pro-v2-design.md  README.md
docs/connect-bridge/: hardware-gateway.md
docs/nimly-ble-app/: ble-protocol.md
docs/nimly-connect-app/: app-architecture.md  reversing-notes.md
docs/plans/: 2026-03-28-nimly-pro-v2-design.md  2026-03-28-nimly-pro-v2-implementation.md  (+3 more)
tests/: test_config_flow_imports.py  test_coordinator.py  test_coordinator_capabilities.py  test_coordinator_slots.py  test_event_decoding.py  test_event_properties.py  test_options_flow.py  test_pin_code_decoding.py
(+7 files in other folders)
